@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: bttcp.c,v 1.29 2002/07/18 22:52:45 dupuy Exp $";
+static const char libbk__rcsid[] = "$Id: bttcp.c,v 1.30 2002/08/15 04:16:26 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -110,7 +110,7 @@ int
 main(int argc, char **argv, char **envp)
 {
   bk_s B = NULL;				/* Baka general structure */
-  BK_ENTRY(B, __FUNCTION__, __FILE__, "bttcp");
+  BK_ENTRY_MAIN(B, __FUNCTION__, __FILE__, "bttcp");
   int c;
   int getopterr=0;
   extern char *optarg;
