@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: test_url.c,v 1.14 2002/07/23 15:10:09 dupuy Exp $";
+static const char libbk__rcsid[] = "$Id: test_url.c,v 1.15 2002/08/15 04:16:27 jtt Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -66,7 +66,7 @@ int
 main(int argc, char **argv, char **envp)
 {
   bk_s B = NULL;				/* Baka general structure */
-  BK_ENTRY(B, __FUNCTION__, __FILE__, "SIMPLE");
+  BK_ENTRY_MAIN(B, __FUNCTION__, __FILE__, "SIMPLE");
   char c;
   int getopterr=0;
   extern char *optarg;
