@@ -9,6 +9,13 @@
 	* lib/b_string.c (FLAG_BEGIN, FLAG_END): use [], not <>, for XML compat
 	(bk_encode_base64): don't read past end of buffer when len==1
 
+2002-08-14  James Tanis  <jtt@saint.sysdetect.com>
+
+	* include/libbk.h (BK_ENTRY): Do not call bk_fun stuff if !B.
+	(BK_ENTRY_MAIN): Special BK_ENTRY for main() (ie when B == NULL,
+	but you still want bk_fun stuff).
+	(BK_RETURN): (and pals) Do not do anything if B == NULL.
+
 2002-08-09  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk.h: bk_ioh_printf takes const char *format
